update authentication flow

--- a/app/views/index.mustache
+++ b/app/views/index.mustache
@@ -1,3 +1,2 @@
-<p>Welcome!</p>
-
-<a href="{{spotifyAuthUrl}}"> Spotify </a>
+<p>You have successfully authorized through spotify</p>
+<p>Access Token: {{accessToken}}</p>
