create session for access and refresh token

--- a/app/views/index.mustache
+++ b/app/views/index.mustache
@@ -1,2 +1,14 @@
+
+
 <p>You have successfully authorized through spotify</p>
 <p>Access Token: {{accessToken}}</p>
+
+
+<button id="retrieve-top"> Retrieve Your Top Artists and Tracks </button>
+
+
+<script>
+    $('#retrieve-top').click(function(){
+
+    })
+</script>
