--- a/app/views/index.mustache
+++ b/app/views/index.mustache
@@ -7,7 +7,7 @@
 
 
 <button id="get-recent"> Retrieve Your Recent Played Tracks </button>
-<button id="get-top-tracks"> Retrieve Your Recent Played Tracks </button>
+<button id="get-top-tracks"> Retrieve Your Top Played Tracks </button>
 
 
 <script>
