--- a/app/views/tracksList.mustache
+++ b/app/views/tracksList.mustache
@@ -8,12 +8,12 @@
     {{#tracks}}
     <tr>
         <tr>
-            <th>{{track.name}}</th>
+            <th>{{name}}</th>
 
             <th>
-                {{#track.artists}}
+                {{#artists}}
                     <p>{{name}}</p>
-                {{/track.artists}}
+                {{/artists}}
             </th>
         </tr>
     </tr>
