--- a/app/views/playlistDropdownSection.mustache
+++ b/app/views/playlistDropdownSection.mustache
@@ -10,6 +10,7 @@
         {{/playlists}}
     </select>
     <button id="submit-playlist" class="btn btn-outline-primary">Submit</button>
+    <button id="start-analyze-btn" class="btn btn-outline-primary" style="display: none;">Analyze</button>
 </div>
 
 
